2008-07-13	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/mouse-dialog.glade,
	  dialogs/mouse-settings/main.c,
	  dialogs/mouse-settings/Makefile.am,
	  xfce4-settings-helper/pointers.h,
	  xfce4-settings-helper/pointers.c: Merge multi pointer
	  branch code.
	* dialogs/keyboard-settings/main.c: Release the channels
	  after running the dialog.
	* xfce4-settings-helper/accessx.c, 
	  xfce4-settings-helper/accessx.h,
	  xfce4-settings-helper/xkb.c,
	  xfce4-settings-helper/xkb.h: Move code into objects. Will
	  make things look nice and allows the code to cleanup when
	  the objects are released in main.c.
	* xfce4-settings-helper/main.c: Use the objects and do some
	  more checking before running the dialog.
	* xfce4-settings-helper/accessx.c: Make disabling the mouse
	  keys work; don't call channel_get functions when not needed.
	* dialogs/keyboard-settings/main.c: Release the channels after
	  running the dialog, also destroy the dialog after using it.
	* configure.ac.in: make some dependencies options, like libnotify,
	  hal, xf86misc. Fix this in the code too.
	* xfce4-settings-helper/accessx.c: Fix showing notifications on
	  systems that don't have the daemon running/installed, ie. avoid
	  a bunch of dbus errors. Make this code cleaner too.
	* TODO: Remove some items that have been fixed. Add a new one.

2008-07-11	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/mouse-dialog.glade: Add some tooltips
	  so people have a clue what the sliders actually do.

2008-07-11	Nick Schermer <nick@xfce.org>

	* dialogs/appearance-settings/main.c: Some code cleanups and
	  plug a stupid leak.
	* dialogs/appearance-settings/appearance-dialog.glade: Redesign
	  the dialog a bit, a notebook inside a notebook is not practical.
	* dialogs/keyboard-settings/main.c, 
	  dialogs/keyboard-settings/shortcut-dialog.c: Fix includes to make
	  it compile.

2008-07-11	Jannis Pohlmann <jannis@xfce.org>

	* TODO: Add TODO file and fill it with the stuff that's still