@@ -1,5 +1,10 @@
 2008-07-13	Nick Schermer <nick@xfce.org>
 
+	* dialogs/keyboard-settings/main.c: Fix code. Thought I saved it,
+	  but I didn't...
+
+2008-07-13	Nick Schermer <nick@xfce.org>
+
 	* dialogs/mouse-settings/mouse-dialog.glade,
 	  dialogs/mouse-settings/main.c,
 	  dialogs/mouse-settings/Makefile.am,
